--- a/public/emailTemplate/email_template.html
+++ b/public/emailTemplate/email_template.html
@@ -35,7 +35,7 @@
         }
 
         .btn-primary td {
-            background-color: #62cb31;
+            background-color: #01508C;
             border-radius: 3px;
             font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
             font-size: 14px;
@@ -44,8 +44,8 @@
         }
 
         .btn-primary td a {
-            background-color: #62cb31;
-            border: solid 1px #62cb31;
+            background-color: #01508C;
+            border: solid 1px #01508C;
             border-radius: 3px;
             border-width: 4px 20px;
             display: inline-block;
